Create send message
